[backend] fix add documents